--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.3.5",
     "@ant-design/icons": "^4.7.0",
     "@craco/craco": "^6.4.3",
     "@reduxjs/toolkit": "^1.8.2",
@@ -12,6 +13,7 @@
     "antd": "^4.21.3",
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
+    "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
