--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/charts": "^1.3.5",
     "@ant-design/icons": "^4.7.0",
+    "@ant-design/plots": "^1.0.9",
     "@craco/craco": "^6.4.3",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
