--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "antd": "^4.21.3",
     "axios": "^0.27.2",
     "craco-less": "^2.0.0",
+    "firebase": "^9.8.3",
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "use-react-router-breadcrumbs": "^3.2.1",
     "sass": "^1.52.3",
+    "use-react-router-breadcrumbs": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
