--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL = "https://furniture-shop-be.herokuapp.com/api/"
+REACT_APP_BACKEND_URL = "https://furniturer-shop-be-bao200118.vercel.app/api/"
